# tgbotxui

./: .env.example  .gitignore  .test-finance-consumed.sqlite3-journal  .test-finance-negative-restricted.sqlite3-journal  .test-finance-negative.sqlite3-journal  .test-finance-root.sqlite3  .test-finance-root.sqlite3-journal  .test-finance-scope.sqlite3-journal  .test-finance.sqlite3-journal  Cargo.toml  README.md  install.sh  main.py  pytest.ini  requirements.txt
.github/workflows/: release.yml
bot/: callbacks.py  config.py  db.py  i18n.py  keyboards.py  metrics.py  migration_runner.py  notification_kinds.py  observability.py  pagination.py  states.py  utils.py
bot/handlers/: _admin_finance_backup.py  admin.py  admin_access.py  admin_bind.py  admin_cancel.py  admin_client_actions.py  admin_client_bulk.py  admin_client_detail.py  admin_client_helpers.py  admin_clients.py  admin_finance.py  admin_finance_format.py  admin_finance_helpers.py  (+14 more)
data/: bot.db-journal
migrations/: 0001_init.sql  0002_audit_logs.sql
scripts/: apply_migrations.py  audit_outbound_telegram.py  diagnose_admin_activity.py  install.sh
src/: config.rs  crypto.rs  db.rs  main.rs  metrics.rs  rate_limit.rs  service.rs  xui.rs
tests/: test_admin_finance_credit.py  test_admin_keyboards.py  test_admin_provisioning_finance.py  test_callbacks.py  test_config_and_vless.py  test_delegated_create_limits.py  test_delegated_visibility.py  test_edit_config_search.py  test_financial_service.py  test_menu_state_reset.py  test_pagination.py  test_usage_notifications.py
tools/: split_admin_finance.py
(+42 files in other folders)
