[package]
name = "tgbot"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
dashmap = "6.1"
dotenvy = "0.15"
once_cell = "1.20"
prometheus = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
url = "2.5"
urlencoding = "2.1"

[profile.release]
# Build settings tuned for low-resource VPS (faster/lower-memory compile).
lto = false
codegen-units = 16
opt-level = 2
strip = "debuginfo"
panic = "abort"
